Added about developer

--- a/Web/index.html
+++ b/Web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Minor Allocation Portal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">         
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -29,19 +29,19 @@
             <li><a class="modal-trigger tooltipped" data-position="bottom" data-tooltip="Log out" id="lo" onclick="logout()">Log Out</a></li>
             <li><a class="modal-trigger" href="#modal2" id="li">Login</a></li>
             <li><a class="modal-trigger" href="#modal1" id="su">SignUp</a></li>
-            <li><a href="https://sites.google.com/view/ngsolutions/home">About Developer</a></li>
+            <li><a href="about.html">About Developer</a></li>
           </ul>
           <ul class="left hide-on-med-and-down">
-            <li><img class="materialboxed" width="150" src="./logo.png" id="logo"></li>
+            <li><img class="materialboxed" width="150" src="assets/logo.png" id="logo"></li>
           </ul>
         </div>
     </nav>
       <ul class="sidenav" id="mobile-demo">
-        <li><img class="materialboxed" width="200" src="./logo2.png" id="logo2"></li>
+        <li><img class="materialboxed" width="200" src="assets/logo2.png" id="logo2"></li>
         <li><a class="modal-trigger tooltipped" data-position="bottom" data-tooltip="Log out" id="lo1" onclick="logout(event)">Log Out</a></li>
         <li><a class="modal-trigger" href="#modal2" id="li1">Login</a></li>
         <li><a class="modal-trigger" href="#modal1" id="su1">SignUp</a></li>
-        <li><a href="https://sites.google.com/view/ngsolutions/home">About Developer</a></li>
+        <li><a href="about.html">About Developer</a></li>
       </ul>
 
       <div class="row">
