--- a/Web/index.html
+++ b/Web/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minor Allocation Portal</title>
+    <link rel="shortcut icon" type="image/jpg" href="assets/internet.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">         
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -17,6 +18,7 @@
       #logo2{
         padding: 20px;
       }
+     
     </style>
     
 </head>
