--- a/Web/index.html
+++ b/Web/index.html
@@ -158,6 +158,7 @@
     <a class="waves-effect waves-light btn" id="excel1" onclick="htmltoexcel()">download Excel</a>
   </p>
 
+   <!-- SignUP Structure -->
   <div id="modal1" class="modal">
     <div class="modal-content">
         <h4>SignUp</h4>
@@ -244,7 +245,7 @@
   firebase.initializeApp(firebaseConfig);
 </script>
 <script src="./auth.js"></script>
-<script src="./firestoreDB.js"></script>
+
 <script src="./table2excel.js"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
