added css files

--- a/Web/about.html
+++ b/Web/about.html
@@ -11,160 +11,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>About Developer</title>
     <link rel="shortcut icon" type="image/jpg" href="assets/info.png"/>
+    <link rel="stylesheet" href="css/about.css">
 </head>
-<style>
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-
-    body {
-        top: 50%;
-        left: 50%;
-
-
-    }
-
-    .row:after {
-        content: "";
-        display: table;
-        clear: both;
-
-
-    }
-
-    .column {
-        float: left;
-        min-width: 300px;
-        padding-top: 4%;
-        padding-left: 70px;
-
-
-    }
-
-    .container {
-        height: 450px;
-        width: 300px;
-        box-shadow: 0 5px 8px rgb(95, 95, 95);
-        background-size: cover;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        overflow: hidden;
-        font-family: 'Abel', sans-serif;
-
-
-    }
-
-    .image1 {
-        height: 200px;
-        width: 200px;
-        background-image: url(assets/Niranjan.jpg);
-        background-size: cover;
-        border-radius: 50%;
-        border: 8px solid white;
-        position: relative;
-        top: 110px;
-        margin-left: 110px;
-        box-shadow: 0 2px 15px rgb(58, 54, 54);
-        transform: rotate(-25deg);
-    }
-
-    .image2 {
-        height: 200px;
-        width: 200px;
-        background-image: url(assets/pratik.jpeg);
-        background-size: cover;
-        border-radius: 50%;
-        border: 8px solid white;
-        position: relative;
-        top: 110px;
-        margin-left: 110px;
-        box-shadow: 0 2px 15px rgb(58, 54, 54);
-        transform: rotate(-25deg);
-    }
-
-    .image3 {
-        height: 200px;
-        width: 200px;
-        background-image: url(assets/atharva.jpg);
-        background-size: cover;
-        background-position: 50% 30%;
-        border-radius: 50%;
-        border: 8px solid white;
-        position: relative;
-        top: 110px;
-        margin-left: 110px;
-        box-shadow: 0 2px 15px rgb(58, 54, 54);
-        transform: rotate(-25deg);
-    }
-
-    .image4 {
-        height: 200px;
-        width: 200px;
-        background-image: url(assets/aditya.jpg);
-        background-size: cover;
-        background-position: 40% 30%;
-        border-radius: 50%;
-        border: 8px solid white;
-        position: relative;
-        top: 110px;
-        margin-left: 110px;
-        box-shadow: 0 2px 15px rgb(58, 54, 54);
-        transform: rotate(-25deg);
-    }
-
-    .shape {
-        height: 250px;
-        width: 400px;
-        background-color: #7B1FA2;
-        margin-left: -20px;
-        position: relative;
-        top: -80px;
-        box-shadow: 0 2px 8px rgb(66, 66, 66);
-        transform: rotate(25deg);
-    }
-
-    h1 {
-        text-align: center;
-        padding-top: 50px;
-        font-weight: 700;
-        font-family: 'Montserrat', sans-serif;
-    }
-
-    h3 {
-        margin-bottom: 10px;
-        font-family: 'Montserrat', sans-serif;
-    }
-
-    .title {
-        color: rgb(105, 100, 109);
-    }
-
-    p {
-        padding-left: 30px;
-        padding-right: 30px;
-        color: rgb(105, 100, 109);
-    }
-
-    .icons {
-        margin-top: 15px;
-    }
-
-    .icons i {
-        margin-left: 10px;
-        font-size: 20px;
-        transition: 0.3s;
-        color: #7B1FA2;
-        ;
-    }
-
-    .icons i:hover {
-        transform: scale(1.1);
-        color: #b841eb;
-    }
-</style>
 
 <body>
     <h1><i class="fa fa-laptop" aria-hidden="true"></i> About Developers</h1>
