--- a/Web/index.html
+++ b/Web/index.html
@@ -13,100 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;600;800&display=swap"
     rel="stylesheet">
-  <style>
-    #mainheading {
-      padding-left: 15px;
-    }
-
-    #logo {
-      padding: 20px;
-      cursor: pointer;
-    }
-
-    #logo2 {
-      padding: 20px;
-      cursor: pointer;
-    }
-
-    body {
-      font-family: 'Raleway', sans-serif;
-    }
-
-    p {
-      font-family: 'Open Sans', sans-serif;
-      padding-left: 30px;
-      padding-right: 30px;
-      font-size: 18px;
-      -webkit-user-select: none; /* Safari */
-      -ms-user-select: none; /* IE 10 and IE 11 */
-      user-select: none; /* Standard syntax */
-    }
-
-    h3 {
-      font-weight: 800;
-      -webkit-user-select: none; /* Safari */
-      -ms-user-select: none; /* IE 10 and IE 11 */
-      user-select: none; /* Standard syntax */
-    }
-
-    h4 {
-      font-size: 30px;
-      font-weight: 600;
-      -webkit-user-select: none; /* Safari */
-      -ms-user-select: none; /* IE 10 and IE 11 */
-      user-select: none; /* Standard syntax */
-    }
-    #resClosed
-    {
-      padding-top: 50px;
-      -webkit-user-select: none; 
-      -ms-user-select: none; 
-      user-select: none; 
-    }
-    #img1 {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 22%;
-      -webkit-user-select: none; 
-      -ms-user-select: none; 
-      user-select: none; 
-    }
-    #wait{
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      padding-top: 50px;
-      width: 250px;
-      -webkit-user-select: none; 
-      -ms-user-select: none; 
-      user-select: none; 
-    }
-    .row {
-      padding: 50px;
-    }
-
-    .wrapper {
-      padding-top: 200px;
-      text-align: center;
-      
-    }
-
-    .button {
-      position: absolute;
-      top: 50%;
-    }
-    #table{
-      -webkit-user-select: none; 
-      -ms-user-select: none; 
-      user-select: none; 
-    }
-    #Coursetable{
-      -webkit-user-select: none; 
-      -ms-user-select: none; 
-      user-select: none; 
-    }
-  </style>
+  <link rel="stylesheet" href="css/index.css">
 
 </head>
 
