--- a/Web/index.html
+++ b/Web/index.html
@@ -244,7 +244,7 @@
       <h4>Are you Sure?</h4>
       <h6>You cannot revert this operation!!!</h6>
       <form onsubmit="resetfnclose(event)">
-        <a class="waves-effect waves-light btn modal-trigger purple lighten-1" onclick="reset(event)">Reset</a>
+        <a class="waves-effect waves-light btn modal-trigger purple lighten-1" onclick="reset(event)">Yes</a>
         <button type="submit" class="waves-effect waves-light btn modal-trigger purple lighten-1">No</button>
       </form>
     </div>
